@@ -43,11 +43,15 @@
     <dd><a href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
 
   <dt>Editors:
-    <dd class="h-card vcard">
-      <a class="p-name fn u-url url" rel="author"
-         href="[editor1 personal URL (opt.)]">[editor1 name]</a>,
-      <span class="p-org org">[affiliation (opt.)]</span>,
-      <span class="u-email email">[email address (opt.)]</span>
+  <dd class="vcard">
+    <span class="fn">Dirk Schulze</span>,
+    <span class="org">Adobe Systems</span>, 
+    <span class="email">dschulze@adobe.com</span>
+  </dd>
+  <dd class="vcard">
+    <span class="fn"><a href="http://www.xanthir.com/contact/">Tab Atkins Jr.</a></span>,
+    <span class="org">Google, Inc.</span>
+  </dd>
 </dl>
 
 <!--copyright-->
