@@ -2,15 +2,26 @@
 "http://www.w3.org/TR/html4/strict.dtd">
 
 <html lang=en>
- <head><meta content="text/html; charset=utf-8" http-equiv=Content-Type>
-
+ <head profile="http://dublincore.org/documents/2008/08/04/dc-html/ ">
+  <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
   <title>CSS Masking</title>
+
+  <link href="http://purl.org/dc/terms/" rel=schema.DC>
+  <meta content="CSS Masking" name=DC.title>
+  <meta content=text name=DC.type>
+  <meta content=2012-09-05 name=DC.issued>
+  <meta content="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html"
+   name=DC.creator>
+  <meta content=W3C name=DC.publisher>
+  <meta content="http://www.w3.org/TR/2012/ED-css-masking-20120905/"
+   name=DC.identifier>
+  <link href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright"
+   rel=DC.rights>
   <link href="#contents" rel=contents>
   <link href="#index" rel=index>
   <link href=default.css rel=stylesheet type="text/css">
   <link href="http://www.w3.org/StyleSheets/TR/W3C-ED.css" rel=stylesheet
-  type="text/css">
-
+   type="text/css">
   <style type="text/css">
   .todo {
       border-left: 0.5em solid #f44;
@@ -32,33 +43,35 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 29 August 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 5 September
+    2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20120829/-->
+     <!--http://www.w3.org/TR/2012/WD-css-masking-20120905/-->
 
     <dt>Latest version:
 
     <dd><a
      href="http://www.w3.org/TR/css-masking/">http://www.w3.org/TR/css-masking/</a>
-     
 
     <dt>Editor's draft:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     
 
     <dt>Editors:
 
-    <dd class="h-card vcard"> <a class="p-name fn u-url url"
-     href="[editor1 personal URL (opt.)]" rel=author>[editor1 name]</a>,
-     <span class="p-org org">[affiliation (opt.)]</span>, <span
-     class="u-email email">[email address (opt.)]</span>
+    <dd class=vcard> <span class=fn>Dirk Schulze</span>, <span
+     class=org>Adobe Systems</span>, <span
+     class=email>dschulze@adobe.com</span>
+
+    <dd class=vcard> <span class=fn><a
+     href="http://www.xanthir.com/contact/">Tab Atkins Jr.</a></span>, <span
+     class=org>Google, Inc.</span>
    </dl>
    <!--begin-copyright-->
    <p class=copyright><a
@@ -322,7 +335,7 @@
      element does not have an associated CSS layout box and is in the
      <code>http://www.w3.org/2000/svg</code> namespace (See <a
      href="http://www.w3.org/TR/cssom-view/#dom-element-getboundingclientrect">getBoundingClientRect</a>
-     [<a href="#ref-CSSOM">CSSOM</a>]).</p>
+     [<a href="#ref-CSSOM">CSSOM</a>]).
 
    <dt id=TermLocalCoordinateSystem><dfn id=local-coordinate-system>local
     coordinate system</dfn>
@@ -333,19 +346,19 @@
      coordinate system) is the coordinate system that is currently active and
      which is used to define how coordinates and lengths are located and
      computed, respectively, on the current canvas <a href="#CSS3-TRANSFORMS"
-     rel=biblioentry>[CSS3-TRANSFORMS]<!--{{CSS3-TRANSFORMS}}--></a>.</p>
+     rel=biblioentry>[CSS3-TRANSFORMS]<!--{{CSS3-TRANSFORMS}}--></a>.
 
     <p> For elements that have an associated CSS layout box, the current user
      coordinate system has its origin at the top-left corner of the <a
      class=term href="#bounding-client-rect">bounding client rect</a> and one
      unit equals one CSS pixel. The viewport for resolving percentage values
      is defined by the width and height of the <a class=term
-     href="#bounding-client-rect">bounding client rect</a>.</p>
+     href="#bounding-client-rect">bounding client rect</a>.
 
     <p> If the element does not have an associated CSS layout box and is in
      the <code>http://www.w3.org/2000/svg</code> namespace, the current local
      coordinate system has its origin at the top-left corner of the element's
-     nearest viewport.</p>
+     nearest viewport.
 
    <dt id=TermUserCoordinateSystem><dfn id=user-coordinate-system>user
     coordinate system</dfn>
@@ -626,7 +639,7 @@ mask-repeat: no-repeat<strong>, no-repeat, no-repeat</strong>;
    for image display.
 
   <div class=example>
-   <p>Some examples specifying mask images:</p>
+   <p>Some examples specifying mask images:
 
    <pre>
 body { mask-image: linear-gradient(black 0%, transparent 100%) }
@@ -806,7 +819,6 @@ body {
    <div class=figure>
     <p><img alt="Image of an element with a dotted mask."
      src="images/mask-repeat.svg" style="border: solid black 1px;" width=240>
-     
 
     <p class=caption>The effect of ‘<code class=property>space</code>’:
      the mask image of a dot is tiled to cover the whole <a class=index
@@ -926,7 +938,7 @@ body {
 
   <div class=example>
    <p>The following declarations give the stated (horizontal, vertical)
-    offsets from the top left corner:</p>
+    offsets from the top left corner:
 
    <pre>
  mask-position: left 10px top 15px;   /* 10px, 15px */
@@ -1017,7 +1029,7 @@ body {
     class=property>mask</code></a>’ shorthand declarations use keywords to
     set ‘<a href="#mask-position"><code
     class=property>mask-position</code></a>’ to the stated percentage
-    values.</p>
+    values.
 
    <pre>
 body { mask: url("banner.jpeg") right top }    /* 100%   0% */
@@ -1143,7 +1155,6 @@ body {
    don't have a ‘<code class=css>border-box</code>’ or ‘<code
    class=css>padding-box</code>’. ‘<a href="#content-box0"><code
    class=css>content-box</code></a>’ is used as mask painting area instead.
-   
 
   <p>See the section <a href="#layering">“Layering multiple mask
    images”</a> for how ‘<a href="#mask-clip"><code
@@ -1702,10 +1713,10 @@ div {
   <div class=issue>
    <p> Need to define the parsing here since <a
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#DataTypeFuncIRI">&lt;FuncIRI&gt;</a>
-    and <a href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a> overlap.</p>
+    and <a href="#ltmask-imagegt"><var>&lt;mask-image&gt;</var></a> overlap.
 
    <p> Basically the process is that when there is a <code>url()</code>
-    component:</p>
+    component:
 
    <ol>
     <li>If the IRI contains a ‘<code class=css>#</code>’, look up the
@@ -2097,7 +2108,7 @@ div {
   </table>
 
   <div class=adef-list>
-   <p><em>Attribute definitions:</em></p>
+   <p><em>Attribute definitions:</em>
 
    <dl>
     <dt id=MaskElementMaskUnitsAttribute><span class=adef>maskUnits</span> =
@@ -2290,10 +2301,10 @@ div {
 
   <div class=figure> <img alt="pieces of a mask box image"
    src="images/mask-box-image-mask.svg" width=240>
-   <p class=caption> Pieces of a mask box image.</p>
+   <p class=caption> Pieces of a mask box image.
 
    <p class=issue>Images should be replaced by a PNG that does not use
-    &lt;mask&gt;</p>
+    &lt;mask&gt;
   </div>
 
   <p> These pieces may be sliced, scaled and stretched in various ways to fit
@@ -2303,14 +2314,14 @@ div {
   <div class=example>
    <p> The mask image in the following example gets splitted into four
     corners with the dimension of 75 pixels, four edges and the middle piece
-    that get stretched and scaled.</p>
+    that get stretched and scaled.
 
    <div class=figure> <img alt="Example for 'mask-box-image'" height=240
     src="images/mask-box-image.svg" width=720>
     <p class=caption> Example for ‘<a href="#mask-box-image0"><code
      class=property>mask-box-image</code></a>’. The object on the left is
      the object to mask. The second image is the alpha mask and the last
-     image the masked object.</p>
+     image the masked object.
    </div>
 
    <pre>
@@ -2551,7 +2562,6 @@ div {
      <th>Computed value:
 
      <td>all <var>&lt;length&gt;</var>s made absolute, otherwise as specified
-      
 
     <tr>
      <th>Animatable:
@@ -2667,7 +2677,6 @@ div {
      <th>Computed value:
 
      <td>all <var>&lt;length&gt;</var>s made absolute, otherwise as specified
-      
 
     <tr>
      <th>Animatable:
@@ -3037,7 +3046,7 @@ div {
    specified on the <a class=element-name
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/paths.html#PathElement">‘<code
    class=property>path</code>’</a> element that defines the clipping shape:
-   
+
    <pre>
 &lt;g clip-rule="nonzero"&gt;
   &lt;clipPath id="MyClip"&gt;
@@ -3051,7 +3060,7 @@ div {
     evenodd clipping rule to be applied because the ‘<a
     href="#clip-rule"><code class=property>clip-rule</code></a>’ is
     specified on the referencing element, not on the object defining the
-    clipping shape:</p>
+    clipping shape:
 
    <pre>
 &lt;g clip-rule="nonzero"&gt;
@@ -3315,7 +3324,7 @@ div {
   </table>
 
   <div class=adef-list>
-   <p><em>Attribute definitions:</em></p>
+   <p><em>Attribute definitions:</em>
 
    <dl>
     <dt id=ClipPathElementClipPathUnitsAttribute><span
@@ -3509,7 +3518,7 @@ div {
     Sheets Level 2 Revision 1 (CSS 2.1) Specification.</cite></a> 7 June
     2011. W3C Recommendation. URL: <a
     href="http://www.w3.org/TR/2011/REC-CSS2-20110607">http://www.w3.org/TR/2011/REC-CSS2-20110607</a>
-    </dd>
+   </dd>
    <!---->
 
    <dt id=CSS3-EXCLUSIONS>[CSS3-EXCLUSIONS]
@@ -3519,7 +3528,7 @@ div {
     Exclusions and Shapes Module Level 3.</cite></a> 3 May 2012. W3C Working
     Draft. (Work in progress.) URL: <a
     href="http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/">http://www.w3.org/TR/2012/WD-css3-exclusions-20120503/</a>
-    </dd>
+   </dd>
    <!---->
 
    <dt id=CSS3-IMAGES>[CSS3-IMAGES]
@@ -3529,7 +3538,7 @@ div {
     Values and Replaced Content Module Level 3.</cite></a> 17 April 2012. W3C
     Candidate Recommendation. (Work in progress.) URL: <a
     href="http://www.w3.org/TR/2012/CR-css3-images-20120417/">http://www.w3.org/TR/2012/CR-css3-images-20120417/</a>
-    </dd>
+   </dd>
    <!---->
 
    <dt id=DOM>[DOM]
@@ -3538,14 +3547,14 @@ div {
     href="http://www.w3.org/TR/2012/WD-dom-20120405/"><cite>DOM4.</cite></a>
     5 April 2012. W3C Working Draft. (Work in progress.) URL: <a
     href="http://www.w3.org/TR/2012/WD-dom-20120405/">http://www.w3.org/TR/2012/WD-dom-20120405/</a>
-    </dd>
+   </dd>
    <!---->
 
    <dt id=FILTER-EFFECTS>[FILTER-EFFECTS]
 
    <dd>Vincent Hardy; Dean Jackson; Erik Dahlström. <cite>Filter
     Effects 1.0.</cite> (forthcoming). W3C Working Draft. (Work in progress)
-    </dd>
+   </dd>
    <!---->
 
    <dt id=SELECTORS4>[SELECTORS4]
@@ -3555,7 +3564,7 @@ div {
     Level 4.</cite></a> 23 August 2012. W3C Working Draft. (Work in
     progress.) URL: <a
     href="http://www.w3.org/TR/2012/WD-selectors4-20120823/">http://www.w3.org/TR/2012/WD-selectors4-20120823/</a>
-    </dd>
+   </dd>
    <!---->
 
    <dt id=SVG11>[SVG11]
@@ -3565,7 +3574,7 @@ div {
     Vector Graphics (SVG) 1.1 (Second Edition).</cite></a> 16 August 2011.
     W3C Recommendation. URL: <a
     href="http://www.w3.org/TR/2011/REC-SVG11-20110816/">http://www.w3.org/TR/2011/REC-SVG11-20110816/</a>
-    </dd>
+   </dd>
    <!---->
   </dl>
   <!--end-normative-->
@@ -3585,7 +3594,7 @@ div {
     Transforms.</cite></a> 3 April 2012. W3C Working Draft. (Work in
     progress.) URL: <a
     href="http://www.w3.org/TR/2012/WD-css3-transforms-20120403/">http://www.w3.org/TR/2012/WD-css3-transforms-20120403/</a>
-    </dd>
+   </dd>
    <!---->
 
    <dt id=CSS3BG>[CSS3BG]
@@ -3595,7 +3604,7 @@ div {
     Backgrounds and Borders Module Level 3.</cite></a> 24 July 2012. W3C
     Candidate Recommendation. (Work in progress.) URL: <a
     href="http://www.w3.org/TR/2012/CR-css3-background-20120724/">http://www.w3.org/TR/2012/CR-css3-background-20120724/</a>
-    </dd>
+   </dd>
    <!---->
   </dl>
   <!--end-informative-->
@@ -3614,7 +3623,6 @@ div {
       class=property>mask-box-image-width</code></a>’ value, <a
       href="#auto1"
       title="''auto'', 'mask-box-image-width' value"><strong>7.3.</strong></a>
-      
 
      <li>‘<a href="#mask-size"><code class=property>mask-size</code></a>’
       value, <a href="#auto"
@@ -3666,7 +3674,6 @@ div {
     title="'&lt;child-selector&gt;'"><strong>6.8.</strong></a>
 
    <li>clipPath, <a href="#clippath" title=clipPath><strong>8.3.</strong></a>
-    
 
    <li>clip-path, <a href="#clip-path"
     title=clip-path><strong>8.1.</strong></a>
@@ -3687,7 +3694,7 @@ div {
 
    <li>‘<a href="#content-box0"><code class=css>content-box</code></a>’,
     <a href="#content-box0" title="''content-box''"><strong>6.5.</strong></a>
-    
+
     <ul>
      <li>‘<a href="#mask-clip"><code class=property>mask-clip</code></a>’
       value, <a href="#content-box"
@@ -3793,7 +3800,6 @@ div {
 
    <li><a href="#ltmask-sizegt"><var>&lt;mask-size&gt;</var></a>, <a
     href="#ltmask-sizegt" title="&lt;mask-size&gt;"><strong>6.6.</strong></a>
-    
 
    <li>mask-size, <a href="#mask-size"
     title=mask-size><strong>6.6.</strong></a>
@@ -3806,7 +3812,6 @@ div {
 
    <li><a href="#ltmask-typegt"><var>&lt;mask-type&gt;</var></a>, <a
     href="#ltmask-typegt" title="&lt;mask-type&gt;"><strong>6.7.</strong></a>
-    
 
    <li>mask-type, <a href="#mask-type"
     title=mask-type><strong>6.7.</strong></a>
@@ -3849,7 +3854,6 @@ div {
       class=property>mask-box-image-repeat</code></a>’ value, <a
       href="#repeat0"
       title="''repeat'', 'mask-box-image-repeat' value"><strong>7.5.</strong></a>
-      
 
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#repeat"
@@ -3879,7 +3883,6 @@ div {
       class=property>mask-box-image-repeat</code></a>’ value, <a
       href="#round0"
       title="''round'', 'mask-box-image-repeat' value"><strong>7.5.</strong></a>
-      
 
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#round"
@@ -3895,7 +3898,6 @@ div {
       class=property>mask-box-image-repeat</code></a>’ value, <a
       href="#space0"
       title="''space'', 'mask-box-image-repeat' value"><strong>7.5.</strong></a>
-      
 
      <li>‘<a href="#mask-repeat"><code
       class=property>mask-repeat</code></a>’ value, <a href="#space"
