@@ -1,3 +1,6 @@
+2012-09-05 dschulze@adobe.com
+	Added new editors Tab Atkins and Dirk Schulze to CSS Masking.
+
 2012-08-29 dschulze@adobe.com
 	Removed 'mask-attachment' for now and updated issues to match resolutions of CSS WG.
 
